--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.0",
-    "tailwindcss": "^3.0.0",
-    "vite": "^4.0.0",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^16.0.0",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^3.0.0",
+    "vite": "^4.0.0"
   }
 }
