--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.0.0",
     "express-validator": "^6.14.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^3.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "postcss": "^8.4.31"
+  },
+  "overrides": {
+    "semver": "^7.5.4",
+    "word-wrap": "^1.2.5"
   }
 }
