--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,31 @@
 # Use strict-peer-dependencies=false if peer dependency conflicts occur
 strict-peer-dependencies=false
+
 # Automatically resolve vulnerabilities when possible
 auto-install-peers=true
+
 # Use resolution strategy to force specific versions
 resolution-mode=highest
+
+# Enforce lockfile for consistency across environments
+prefer-frozen-lockfile=true
+
+# Save exact versions rather than using ^ or ~ ranges for better predictability
+save-exact=true
+
+# Store minimal metadata in package-lock.json for better diffs
+lockfile-version=3
+
+# Avoid investing time in optional dependencies if they fail to build
+ignore-scripts=false
+optional=true
+
+# Fund messaging can be distracting
+fund=false
+
+# Increase network timeout for slower connections
+network-timeout=60000
+
+# Security settings
+audit=true
+audit-level=moderate
