--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/server.js",
-    "dev:all": "concurrently --kill-others-on-fail \"npm run server\" \"npm run dev\""
+    "server:dev": "NODE_ENV=development node server/server.js",
+    "server:prod": "NODE_ENV=production node server/server.js",
+    "dev:all": "concurrently --kill-others-on-fail \"npm run server:dev\" \"npm run dev\"",
+    "start": "NODE_ENV=production node server/server.js",
+    "deploy": "npm run build && npm run start"
   },
   "dependencies": {
+    "concurrently": "9.1.2",
     "cors": "2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
