--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "server:prod": "NODE_ENV=production node server/server.js",
     "dev:all": "concurrently --kill-others-on-fail \"npm run server:dev\" \"npm run dev\"",
     "start": "NODE_ENV=production node server/server.js",
-    "deploy": "npm run build && npm run start"
+    "deploy": "npm run build && npm run start",
+    "lint": "eslint src --ext js,jsx",
+    "test": "echo \"No tests specified\" && exit 0",
+    "postinstall": "echo \"Make sure to copy .env.example to .env and update the values\"",
+    "prestart": "npm run build"
   },
   "dependencies": {
     "concurrently": "9.1.2",
@@ -37,5 +41,8 @@
   "overrides": {
     "semver": "^7.5.4",
     "word-wrap": "^1.2.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
